--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha test/*_test.js",
-    "dtest": "./node_modules/mocha/bin/mocha test/*_test.js -G -w --reporter spec --slow 500"
+    "dtest": "./node_modules/mocha/bin/mocha test/*_test.js -G -w --reporter spec --slow 500",
+    "patch": "npm version patch && npm publish && git push --tags && git push origin master",
+    "minor": "npm version minor && npm publish && npm version patch && git push --tags && git push origin master"
   },
   "dependencies": {
     "gextend": "^0.1.6",
